--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/core": "~7.2.0",
     "@angular/forms": "~7.2.0",
     "@angular/material": "^7.3.7",
+    "@angular/material-examples": "angular/material2-docs-content#7.3.x",
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
