--- a/package.json
+++ b/package.json
@@ -13,18 +13,20 @@
   "dependencies": {
     "@angular/animations": "^7.2.13",
     "@angular/cdk": "^7.3.7",
-    "@angular/common": "~7.2.0",
+    "@angular/common": "^7.2.13",
     "@angular/compiler": "~7.2.0",
-    "@angular/core": "~7.2.0",
+    "@angular/core": "^7.2.13",
     "@angular/forms": "~7.2.0",
     "@angular/material": "^7.3.7",
     "@angular/material-examples": "github:angular/material2-docs-content#7.3.x",
+    "@angular/material-moment-adapter": "^7.3.7",
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
     "angularx-social-login": "^1.2.6",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
+    "moment": "^2.24.0",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
