--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "npm run build-themes && ng serve",
     "build": "ng build",
+    "build-themes": "bash ./tools/build-themes.sh",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
